# inf05016-primality

./: CMakeLists.txt  LICENSE  README.md
include/: prime.hpp
lab/: generate-instances.py  run-tests.py  setup-env.py
lab/analysis/: result.csv
lab/data/random/: mbprimes.txt
src/: main.cpp  prime.cpp
